# mailing_service

./: .env.sample  README.md  pyproject.toml  requirements.txt
apps/blog/: admin.py  forms.py  models.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py
apps/client/: admin.py  forms.py  models.py  urls.py  views.py
apps/client/migrations/: 0001_initial.py  0002_client_owner.py  0002_client_owner_alter_client_comment_alter_client_email_and_more.py  0003_alter_client_first_name_alter_client_last_name.py
apps/crontab/: apps.py  cron.py
apps/mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/mailing/migrations/: 0001_initial.py  0002_mailing_message.py  0002_remove_mailing_user_mailing_message_mailing_owner_and_more.py  0003_alter_mailing_data_mailing_finish.py  0003_alter_mailing_user.py  0004_alter_mailing_data_mailing_finish.py  0004_mailing_sent_time_alter_mailing_client_mailing_and_more.py  0005_alter_mailing_data_mailing_finish.py
apps/main/: urls.py  utils.py  views.py
apps/message/: admin.py  forms.py  models.py  urls.py  views.py
apps/message/migrations/: 0001_initial.py  0002_remove_message_owner.py  0003_message_owner.py
apps/users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0003_alter_user_options.py  0004_rename_avatars_user_avatar.py  (+1 more)
client/: models.py
config/: settings.py  urls.py
fixtures/: 01_auth.json  02_users.json  03_clients.json  04_messages.json  05_mailings.json  06_articles.json
main/: urls.py  views.py
users/: models.py
(+31 files in other folders)
